--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,25 +7,7 @@
   font-weight: 500;
   text-align: center;
 }
-.nav :hover {
-  border-radius: 0px;
-  background: #7952b3;
-  color: #ffffff !important;
-  font-size: 16px;
-  font-family: Inter, sans-serif;
-  font-weight: 500;
-  text-align: center;
-}
-.logo-img {
-  font-size: 50px;
-  font-weight: 900;
-  background-image: url(https://99percentinvisible.org/app/uploads/2019/02/abstract-background-colors.jpg);
-  background-size: cover;
-  /* background-position: center; */
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-}
+
 .heading-line {
   font-size: 50px;
   font-weight: 900;
@@ -50,21 +32,7 @@
   font-weight: 500;
   text-align: center;
 }
-.cards-item img {
-  width: 60px;
-}
 
-.testimonials-cards-item {
-  background-color: #7952b3;
-  color: #ffffff;
-}
-.cards {
-  padding-left: 60px;
-}
-.cards :hover {
-  background-color: #7952b3;
-  color: #ffffff;
-}
 body {
   background: whitesmoke;
 }
@@ -72,71 +40,7 @@ body {
   height: 600px;
   width: 750px;
 }
-.footer {
-  height: 300px;
-  border-radius: 10px;
-  background-color: #7952b3;
-  color: #ffffff;
-  font-size: 16px;
-  font-family: Inter, sans-serif;
-  font-weight: 500;
-}
-.footer ul li {
-  text-decoration: none;
-}
-.heading-line2 {
-  font-size: 50px;
-  font-weight: 900;
-  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaTbTx5DVnGlZ0NFXsE8Fx9vFjrtyRUeSB4KZcJRFqFm169_-JQiVrEXG6n4PwiTm8jKc&usqp=CAU);
-  background-size: cover;
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-}
-/* footer {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  left: 0px;
-} */
-.courseimages {
-  margin-left: 15px;
-  padding: 4px;
-  min-width: 30px;
-  height: 150px;
-}
-.courseimages :hover {
-  margin-left: 15px;
-  padding: 4px;
-  min-width: 30px;
-  height: 150px;
-}
-.category-cards-item {
-  border-radius: 20px;
-  background-color: #ffffff;
-  color: #000000 !important;
-}
-.category-cards :hover {
-  background: #7952b3;
-  color: #ffffff !important;
-  /* font-size: 16px; */
-  font-family: Inter, sans-serif;
-  border-radius: 20px;
-  .categorybtn {
-    background-color: whitesmoke;
-    color: #000000 !important;
-  }
-}
-.categorybtn {
-  border-radius: 20px;
-  background: #7952b3;
-  color: #ffffff !important;
-  font-size: 16px;
-  font-family: Inter, sans-serif;
-  font-weight: 500;
-  text-align: center;
-  border-color: #7952b3;
-}
+
 .trusted-by {
   align-items: center;
   text-align: center;
@@ -159,21 +63,80 @@ body {
   padding-left: 20px;
 }
 
-.admin-button {
-  text-decoration: none;
-  border-radius: 80px;
-  border-color: #7952b3;
-  background-color: #7952b3;
-  color: #ffffff;
-  font-size: 40px;
-  font-family: Inter, sans-serif;
+
+
+
+.bars {
+max-height: 245px;}body {
+  background: #bda0bd;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
 }
 
-.admin-img-top {
-  max-height: 300px;
-  max-width: 350px;
-  margin-left: 65px;
-  border-radius: 150px;
+
+
+.input-text {
+  display: inline;
+  margin: 0;
+  border: none;
+  border-radius: 0.4rem;
+  padding: 10px;
 }
-.bars {
-max-height: 245px;}
+
+.list ul li button {
+  position: absolute;
+  right: 0%;
+  background: #f34541;
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
+  border-radius: 0.4rem;
+  display: inline-block;
+  border: none;
+}
+
+.add-btn {
+  color: #fff !important;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #7313cb;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 0.4rem;
+  display: inline-block;
+  border: none;
+}
+
+.app-title {
+  text-align: center;
+  color: #fff;
+  font-size: 70px;
+}
+ul {
+  /* remove default padding and margin from ul*/
+  margin: 0px;
+  padding: 0px;
+}
+.list ul li {
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  color: #000000;
+  background-color: #ffffff;
+  line-height: 30px;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #cccccc;
+  padding: 10px;
+  position: relative;
+}
+
+.container {
+  color: #fff;
+  max-width: 500px;
+  margin: auto;
+}
+
